[package]
name = "again"
version = "0.1.2"
authors = ["softprops <d.tangren@gmail.com>"]
description = "wasm-compatible retry util for std library futures"
edition = "2018"
documentation = "https://docs.rs/again"
homepage = "https://github.com/softprops/again"
repository = "https://github.com/softprops/again"
keywords = ["retry", "futures", "futures-retry"]
license = "MIT"
readme = "README.md"
categories = ["asynchronous", "wasm", "web-programming"]

[lib]
crate-type = ["cdylib", "rlib"]

[badges]
maintenance = { status = "actively-developed" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["log", "rand"]

[dependencies]
log = { version = "0.4", optional = true }
rand = { version = "0.8", optional = true }
getrandom = { version = "0.2", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = "0.3.69"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.42"
getrandom = { version = "0.2", features = ["js"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
async-std = "1.12.0"

[dev-dependencies]
approx = "0.5"
pretty_env_logger = "0.4"
reqwest = "0.11"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"
